--- a/OpenQuizz/View/Base.lproj/Main.storyboard
+++ b/OpenQuizz/View/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -17,11 +17,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="OpenQuizz" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yBh-ah-zll">
-                                <rect key="frame" x="107" y="762" width="200" height="80"/>
+                                <rect key="frame" x="87.5" y="567" width="200" height="80"/>
                                 <color key="backgroundColor" red="0.35870707039999999" green="0.55486404899999997" blue="0.78467851879999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="YEP-Aw-0od"/>
@@ -36,14 +36,14 @@
                                 </connections>
                             </button>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="JOW-vh-xtj">
-                                <rect key="frame" x="188.5" y="783.5" width="37" height="37"/>
+                                <rect key="frame" x="169" y="588.5" width="37" height="37"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="37" id="6Sx-91-hYO"/>
                                     <constraint firstAttribute="width" constant="37" id="X3P-7f-F50"/>
                                 </constraints>
                             </activityIndicatorView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0/10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m8n-H2-D08">
-                                <rect key="frame" x="57" y="297" width="300" height="60"/>
+                                <rect key="frame" x="37.5" y="253" width="300" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="300" id="7RY-gX-JQj"/>
                                     <constraint firstAttribute="width" secondItem="m8n-H2-D08" secondAttribute="height" multiplier="5:1" id="fPk-5h-Sbi"/>
@@ -51,9 +51,14 @@
                                 <fontDescription key="fontDescription" name="Balham" family="Balham" pointSize="30"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="heightClass=compact">
+                                    <mask key="constraints">
+                                        <exclude reference="7RY-gX-JQj"/>
+                                    </mask>
+                                </variation>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cpt-IH-uPu" customClass="QuestionView" customModule="OpenQuizz" customModuleProvider="target">
-                                <rect key="frame" x="84.5" y="44" width="245" height="245"/>
+                                <rect key="frame" x="65" y="0.0" width="245" height="245"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Icon Correct" translatesAutoresizingMaskIntoConstraints="NO" id="tzI-vt-RI0">
                                         <rect key="frame" x="104.5" y="202" width="36" height="35"/>
@@ -86,7 +91,7 @@
                                 </connections>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sXD-ng-pyv">
-                                <rect key="frame" x="147" y="378" width="120" height="88"/>
+                                <rect key="frame" x="127.5" y="334" width="120" height="88"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="sXD-ng-pyv" secondAttribute="height" multiplier="15:11" id="2Ap-7V-fCu"/>
                                     <constraint firstAttribute="width" constant="120" id="XtN-WR-0iw"/>
@@ -96,11 +101,41 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="game over" translatesAutoresizingMaskIntoConstraints="NO" id="XHM-hW-yUo">
-                                <rect key="frame" x="117" y="672" width="180" height="80"/>
+                                <rect key="frame" x="97.5" y="477" width="180" height="80"/>
                                 <constraints>
+                                    <constraint firstAttribute="width" secondItem="XHM-hW-yUo" secondAttribute="height" multiplier="29:16" id="2xy-r6-Dj2"/>
+                                    <constraint firstAttribute="width" constant="70" id="I8E-go-CIm"/>
+                                    <constraint firstAttribute="width" constant="87" id="TEE-tN-IrV">
+                                        <variation key="heightClass=compact" constant="90"/>
+                                    </constraint>
                                     <constraint firstAttribute="height" constant="80" id="afG-VU-8Jr"/>
+                                    <constraint firstAttribute="width" secondItem="XHM-hW-yUo" secondAttribute="height" multiplier="7:4" id="bAa-C9-C7W"/>
                                     <constraint firstAttribute="width" constant="180" id="fp0-a2-Blv"/>
+                                    <constraint firstAttribute="width" secondItem="XHM-hW-yUo" secondAttribute="height" multiplier="7:4" id="jTk-Cn-D3Q"/>
+                                    <constraint firstAttribute="width" constant="70" id="rVl-2z-y0N"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="2xy-r6-Dj2"/>
+                                        <exclude reference="I8E-go-CIm"/>
+                                        <exclude reference="TEE-tN-IrV"/>
+                                        <exclude reference="bAa-C9-C7W"/>
+                                        <exclude reference="jTk-Cn-D3Q"/>
+                                        <exclude reference="rVl-2z-y0N"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=compact">
+                                    <mask key="constraints">
+                                        <exclude reference="2xy-r6-Dj2"/>
+                                        <include reference="I8E-go-CIm"/>
+                                        <exclude reference="TEE-tN-IrV"/>
+                                        <exclude reference="afG-VU-8Jr"/>
+                                        <exclude reference="bAa-C9-C7W"/>
+                                        <exclude reference="fp0-a2-Blv"/>
+                                        <include reference="jTk-Cn-D3Q"/>
+                                        <exclude reference="rVl-2z-y0N"/>
+                                    </mask>
+                                </variation>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.34071618320000002" green="0.42130461340000003" blue="0.50840932130000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -112,15 +147,82 @@
                             <constraint firstItem="cpt-IH-uPu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="41A-m5-fVG"/>
                             <constraint firstItem="m8n-H2-D08" firstAttribute="top" secondItem="dr5-aV-X2g" secondAttribute="bottom" constant="16" id="8jz-gB-V7a"/>
                             <constraint firstItem="yBh-ah-zll" firstAttribute="top" secondItem="XHM-hW-yUo" secondAttribute="bottom" constant="10" id="EYX-T6-rD7"/>
+                            <constraint firstItem="yBh-ah-zll" firstAttribute="top" secondItem="sXD-ng-pyv" secondAttribute="bottom" constant="18" id="L44-xe-iIi"/>
                             <constraint firstItem="XHM-hW-yUo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Pt5-rr-MS0"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yBh-ah-zll" secondAttribute="trailing" constant="20" id="QBv-XO-Xib"/>
+                            <constraint firstItem="yBh-ah-zll" firstAttribute="top" secondItem="XHM-hW-yUo" secondAttribute="bottom" constant="23" id="Qa7-LS-sLS"/>
                             <constraint firstItem="JOW-vh-xtj" firstAttribute="centerY" secondItem="yBh-ah-zll" secondAttribute="centerY" id="Uc0-NW-DEd"/>
+                            <constraint firstItem="XHM-hW-yUo" firstAttribute="leading" secondItem="cpt-IH-uPu" secondAttribute="trailing" constant="57" id="Xli-0C-EXU"/>
+                            <constraint firstItem="yBh-ah-zll" firstAttribute="centerX" secondItem="sXD-ng-pyv" secondAttribute="centerX" id="YCb-1W-2AL"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="m8n-H2-D08" secondAttribute="trailing" constant="20" id="aLp-zc-V6j"/>
                             <constraint firstItem="yBh-ah-zll" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="apR-Br-pQG"/>
+                            <constraint firstItem="XHM-hW-yUo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bIS-BZ-vqN"/>
+                            <constraint firstItem="XHM-hW-yUo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="brt-zD-ph2"/>
+                            <constraint firstItem="m8n-H2-D08" firstAttribute="width" secondItem="yBh-ah-zll" secondAttribute="width" id="cut-il-4i0"/>
                             <constraint firstItem="cpt-IH-uPu" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="eEJ-D6-Btd"/>
                             <constraint firstItem="m8n-H2-D08" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="eQ9-Os-kOA"/>
                             <constraint firstItem="sXD-ng-pyv" firstAttribute="top" secondItem="m8n-H2-D08" secondAttribute="bottom" constant="21" id="pMG-OH-EjB"/>
+                            <constraint firstItem="XHM-hW-yUo" firstAttribute="leading" secondItem="cpt-IH-uPu" secondAttribute="trailing" constant="25" id="qdx-LN-psK"/>
+                            <constraint firstItem="cpt-IH-uPu" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="r8j-jA-9za"/>
+                            <constraint firstItem="yBh-ah-zll" firstAttribute="bottom" secondItem="cpt-IH-uPu" secondAttribute="bottom" id="sbg-cX-L5q"/>
+                            <constraint firstItem="XHM-hW-yUo" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="tYP-ca-cJU"/>
                             <constraint firstItem="JOW-vh-xtj" firstAttribute="centerX" secondItem="yBh-ah-zll" secondAttribute="centerX" id="uTD-nP-veF"/>
+                            <constraint firstItem="cpt-IH-uPu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="vBV-8H-b7Q"/>
+                            <constraint firstItem="m8n-H2-D08" firstAttribute="top" secondItem="cpt-IH-uPu" secondAttribute="top" id="wUT-mZ-utW"/>
+                            <constraint firstItem="XHM-hW-yUo" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="zZg-VW-wNC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="QBv-XO-Xib"/>
+                                <exclude reference="aLp-zc-V6j"/>
+                                <exclude reference="r8j-jA-9za"/>
+                                <exclude reference="vBV-8H-b7Q"/>
+                                <exclude reference="Xli-0C-EXU"/>
+                                <exclude reference="bIS-BZ-vqN"/>
+                                <exclude reference="brt-zD-ph2"/>
+                                <exclude reference="qdx-LN-psK"/>
+                                <exclude reference="tYP-ca-cJU"/>
+                                <exclude reference="zZg-VW-wNC"/>
+                                <exclude reference="cut-il-4i0"/>
+                                <exclude reference="wUT-mZ-utW"/>
+                                <exclude reference="L44-xe-iIi"/>
+                                <exclude reference="Qa7-LS-sLS"/>
+                                <exclude reference="YCb-1W-2AL"/>
+                                <exclude reference="sbg-cX-L5q"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="constraints">
+                                <exclude reference="0tB-ma-6nb"/>
+                                <include reference="QBv-XO-Xib"/>
+                                <include reference="aLp-zc-V6j"/>
+                                <exclude reference="41A-m5-fVG"/>
+                                <exclude reference="eEJ-D6-Btd"/>
+                                <include reference="r8j-jA-9za"/>
+                                <include reference="vBV-8H-b7Q"/>
+                                <exclude reference="Pt5-rr-MS0"/>
+                                <include reference="Xli-0C-EXU"/>
+                                <exclude reference="bIS-BZ-vqN"/>
+                                <exclude reference="brt-zD-ph2"/>
+                                <exclude reference="qdx-LN-psK"/>
+                                <include reference="tYP-ca-cJU"/>
+                                <exclude reference="zZg-VW-wNC"/>
+                                <exclude reference="8jz-gB-V7a"/>
+                                <include reference="cut-il-4i0"/>
+                                <exclude reference="eQ9-Os-kOA"/>
+                                <include reference="wUT-mZ-utW"/>
+                                <exclude reference="3Hl-al-Rue"/>
+                                <exclude reference="pMG-OH-EjB"/>
+                                <exclude reference="0nv-YG-9JN"/>
+                                <exclude reference="EYX-T6-rD7"/>
+                                <include reference="L44-xe-iIi"/>
+                                <exclude reference="Qa7-LS-sLS"/>
+                                <include reference="YCb-1W-2AL"/>
+                                <exclude reference="apR-Br-pQG"/>
+                                <include reference="sbg-cX-L5q"/>
+                            </mask>
+                        </variation>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="qjO-5z-YgB" appends="YES" id="Qaj-fh-Rt4"/>
                         </connections>
@@ -141,7 +243,7 @@
                     </connections>
                 </panGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
+            <point key="canvasLocation" x="137.18140929535232" y="136.80000000000001"/>
         </scene>
     </scenes>
     <resources>
